# Audioqual-Waxcheck

./: .gitignore  ALGORITMO.txt  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml
evaluation/: README.md  evaluate.py  generate_dataset.py  report.py
knowledge/: ALGORITMO.txt  BLOQUEOS_MACOS.txt  CACHE.txt  DIAGNOSTICO_CPU.txt  DISTRIBUCION-15march.txt  MEJORAS_EN_ALGORITMO.txt  PLAN_REEMPLAZO_LIBROSA.md  VERIFICACION.txt  VIRTUAL_SCROLL_INTENTO_FALLIDO.txt  WaxCheck_Algoritmo_Explicacion.html
knowledge/wiki/: SCHEMA.md  audioqual-wiki.html  index.md  log.md
references/: nuevo plan de correción de errores V2.rtf  nuevo plan de correción de errores.rtf
references/nueva-ui/: waxcheck-quality-v2.html  waxcheck-quality-v3.html
scripts/: classify_cluster4.py  debug_brickwall.py  debug_final2.py  debug_gradients.py  debug_portishead.py  debug_regressed.py  debug_remaining3.py  debug_ytrips_var.py  diagnose_base009.py  diagnose_cluster4.py  diagnose_comparison.py  diagnose_detection.py  diagnose_false_negatives.py  diagnose_latour.py  diagnose_ytrips.py  measure_cpu.sh  render_icons.py
src/: __init__.py  app.py  main.py
src/core/: __init__.py  analyzer.py  (+4 more)
tests/: benchmark.py  benchmark_baseline.json  benchmark_history.jsonl  benchmark_live.py  benchmark_live_history.jsonl  checklist.json  full_check.sh  funcionamiento-de-tests.rtf  generate_baseline.py  quick_check.sh  quick_test.sh  run_tests.py  test_classification.py  test_detection.py  test_ui.py  tests.json  verify_implementation.py  verify_ui.py
(+56 files in other folders)
