[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audioqual"
version = "1.0.0"
description = "Audio quality analyzer - Detect fake high-bitrate files through spectral analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AudioQual"}
]
keywords = ["audio", "quality", "analyzer", "spectral", "bitrate", "mp3", "flac"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "customtkinter>=5.2.0",
    "tkinterdnd2>=0.3.0",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "mutagen>=1.46.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
audioqual = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
